--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1209,6 +1209,93 @@ section.lazy-placeholder:after {
 .cid-s4xHjboiVs .mbr-section-text {
   color: #efefef;
 }
+.cid-s4xHjboiVs .mbr-crt-title {
+  color: #efefef;
+}
+.cid-s4EgGjTUMb {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #232323;
+}
+.cid-s4EgGjTUMb h2 {
+  text-align: center;
+}
+.cid-s4EgGjTUMb h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-s4EgGjTUMb p {
+  color: #767676;
+}
+.cid-s4EgGjTUMb img {
+  object-fit: cover;
+}
+.cid-s4EgGjTUMb .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-s4EgGjTUMb .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-s4EgGjTUMb .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+.cid-s4EgGjTUMb .mbr-section-subtitle {
+  color: #55b4d4;
+}
+.cid-s4EgGjTUMb .card-title {
+  font-weight: 500;
+}
+.cid-s4EgGjTUMb .card-img {
+  text-align: inherit;
+}
+.cid-s4EgGjTUMb .card-img span {
+  font-size: 48px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-s4EgGjTUMb .mbr-figure {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    height: 100%;
+  }
+}
+@media (max-width: 991px) {
+  .cid-s4EgGjTUMb .mbr-figure {
+    padding-bottom: 2rem;
+    padding-top: 1rem;
+  }
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-s4EgGjTUMb .block-content {
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    text-align: center;
+  }
+  .cid-s4EgGjTUMb .block-content .card {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+  }
+  .cid-s4EgGjTUMb .card:nth-child(1) {
+    padding-bottom: 0!important;
+  }
+}
+.cid-s4EgGjTUMb .mbr-section-title {
+  color: #55b4d4;
+}
+.cid-s4EgGjTUMb .mbr-crt-title {
+  color: #ffffff;
+}
+.cid-s4EgGjTUMb .mbr-section-text {
+  color: #efefef;
+}
 .cid-s4xZgFyYpq {
   background: #cccccc;
 }
