create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1296,7 +1296,7 @@ section.lazy-placeholder:after {
 .cid-sCBjnmvEVC {
   padding-top: 75px;
   padding-bottom: 45px;
-  background-image: url("../../../assets/images/00.gif");
+  background-image: url("../../../assets/images/04.gif");
 }
 .cid-sCBjnmvEVC .nav-tabs .nav-item.open .nav-link:focus,
 .cid-sCBjnmvEVC .nav-tabs .nav-link.active:focus {
@@ -1534,7 +1534,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sCAIOCEzTn .text1 {
-  color: #4264ac;
+  color: #4e6cac;
 }
 .cid-sCAvHazw7q {
   padding-top: 90px;
@@ -1694,6 +1694,7 @@ section.lazy-placeholder:after {
 }
 .cid-sCAwnaXmUC .card-title {
   color: #efefef;
+  text-align: center;
 }
 .cid-sCAQTFMsto {
   padding-top: 0px;
@@ -1731,6 +1732,7 @@ section.lazy-placeholder:after {
 }
 .cid-sCAQTFMsto .card-title {
   color: #efefef;
+  text-align: center;
 }
 .cid-sCBuzc0rEw {
   padding-top: 90px;
